# blogi-backend

./: .dockerignore  .gitignore  .python-version  README.md  docker-compose.local.yml
django_app/: Dockerfile  README.md  mypy.ini  pyproject.toml  seed_generated_posts.py
django_app/apps/: admin.py  models.py
django_app/apps/content/: urls.py  views_fetch_article_job_proxy.py  views_generate_proxy.py  views_regenerate_proxy.py
django_app/apps/custom_admin/: urls.py
django_app/apps/custom_admin/serializers/: dashboard_serializers.py  keyword_serializers.py  post_serializers.py  user_serializers.py
django_app/apps/custom_admin/views/: dashboard_views.py  keyword_views.py  post_views.py  user_views.py
django_app/apps/internal/: urls.py
django_app/apps/internal/serializers/: fetch_article_serializers.py  generate_post_serializers.py  scrap_titles_serializers.py  scrape_images_serializers.py
django_app/apps/internal/test/: test.py
django_app/apps/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_remove_user_username_alter_user_email.py  0004_user_username.py  0005_alter_adminlog_options_alter_article_options_and_more.py  0006_image_keyword_alter_image_post.py  0007_alter_generatedpost_keyword_and_more.py  0008_alter_article_keyword.py  0009_generatedpost_is_generated.py  0010_alter_userinterest_category.py
django_app/apps/users/: urls.py
django_app/apps/utils/: clova_mock.py  paginations.py  permissions.py
django_app/config/: urls.py
django_app/config/settings/: base.py  dev.py  local.py  prod.py
django_app/envs/: .local.env
fastapi_app/: .python-version  Dockerfile  pyproject.toml  test_konlpy.py
fastapi_app/app/: main.py
fastapi_app/app/common/: http_client.py  logger.py  scheduler.py
fastapi_app/app/core/: config.py  deps.py  enums.py  security.py
fastapi_app/envs/: .local.env
fastapi_app/scripts/: test_deactivate_on_failure.py  test_kakao_image.py  test_scrape_entertainment.py  tune_clova.py
(+71 files in other folders)
