[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
     {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.100.0,<0.101.0)",
    "uvicorn[standard] (>=0.22.0,<0.23.0)",
    "httpx (>=0.28.0,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"

